<resources>
    <string name="app_name">Settings</string>
    <string name="search">Search</string>
    <string name="feedback">Feedback</string>
    <string name="close_app">Close App</string>
    <string name="back">Back</string>
    <string name="general">General</string>
    <string name="wi_fi">Wi-fi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="do_not_disturb">Do not disturb</string>
    <string name="airplane_mode">Airplane mode</string>
</resources>